--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,14 @@ p {
     font-weight: 900;
     color:  #ff6600;
 }
+
+
+#header {
+    text-align: center;
+    margin: 0 auto;
+    background: #f3f3f3;
+    max-width: 900px;
+    padding: 10px;
+    border: 1px solid #f3f3f3;
+    box-shadow: 0px 10px 10px #000000;
+}
